# saliency-metrics

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: lint.yml  unit-tests.yml
configs/: roar_r50_food101.py
docs/: requirements_doc.txt
docs/source/: api.rst  conf.py  contribution.rst  datasets.rst  index.rst  installation.rst  metrics.rst  models.rst  utils.rst
requirements/: dev.txt  install.txt
saliency_metrics/datasets/: __init__.py  base_dataset.py  build_dataset.py  image_folder.py  transform_pipelines.py
saliency_metrics/metrics/: __init__.py  attribution_method.py  build_metric.py  build_perturbation.py  serializable_result.py
saliency_metrics/metrics/insertion_deletion/: __init__.py  custom_classifier.py  insertion_deletion.py  insertion_deletion_metric.py  insertion_deletion_perturbation.py  insertion_deletion_result.py
saliency_metrics/metrics/roar/: __init__.py  roar_perturbation.py  roar_results.py  roar_retrain.py  roar_retrain_utils.py
saliency_metrics/metrics/sanity_check/: __init__.py  sanity_check.py  sanity_check_result.py
saliency_metrics/metrics/sensitivity_n/: __init__.py  sensn_perturbation.py  sensn_reinference.py  sensn_result.py  sensn_results.py  test_sensn_result.py  unit test.py
saliency_metrics/models/: __init__.py  build_classifier.py  model_utils.py
saliency_metrics/utils/: __init__.py  resize_img.py
tests/: run_tests.sh
tests/saliency_metrics/datasets/: test_image_folder.py  test_transform_pipelines.py
tests/saliency_metrics/metrics/: test_captum_grad_cam.py
tests/saliency_metrics/metrics/insertion_deletion/: test_insertion_deletion.py  test_insertion_deletion_metric.py  test_insertion_deletion_perturbation.py  test_insertion_deletion_result.py
tests/saliency_metrics/metrics/roar/: test_roar_perturbation.py  test_roar_results.py
tests/saliency_metrics/metrics/sensitivity_n/: test_sensn_perturbation.py  test_sensn_result.py
tests/saliency_metrics/models/: test_build_classifier.py  test_model_utils.py
tests/saliency_metrics/utils/: test_resize_img.py
tools/: run_insertion_deletion.py  run_roar.py
