[build-system]
requires = [
  "wheel",
  "setuptools",
  "torch",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
    | data
    | workdirs
    | \.idea
    | \.vscode
  )/
)
'''
