[build-system]
requires = [
  "wheel",
  "setuptools",
  "torch",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
    | data
    | workdirs
    | \.idea
    | \.vscode
  )/
)
'''

[tool.pytest.ini_options]
# albumentations 1.1.0: DeprecationWarning: Please use `gaussian_filter` from the `scipy.ndimage` namespace
filterwarnings = ["ignore:::albumentations.augmentations.geometric.functional:6"]
