[build-system]
requires = [
  "wheel",
  "setuptools",
  "torch",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
    | data
    | workdirs
    | \.idea
    | \.vscode
  )/
)
'''

[tool.pytest.ini_options]
# 1. albumentations 1.1.0: DeprecationWarning: Please use `gaussian_filter` from the `scipy.ndimage` namespace
# 2. captum 0.5.0: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14
filterwarnings = [
  "ignore:::albumentations.augmentations.geometric.functional:6",
  "ignore:::captum.attr._utils.visualization:15",
]
