[metadata]
name = saliency-metrics
description = A Unified Framework for Benchmarking Explanation methods in Computer Vision
keywords = Deep Learning, Computer Vision, Explainable AI
license = MIT License
url = https://github.com/sandylaker/saliancy-metrics

[options]
zip_safe = False
install_requires =
    albumentations
    mmcv
    numpy
    opencv-python
    timm
    torch
    torchvision
    pytorch-ignite

[bdist_wheel]
universal=1

[aliases]
test=pytest

[flake8]
max-line-length = 120
ignore = E722,E203,E231,F841,W503,F403,E402,F405
per-file-ignores = __init__.py: F401

[mypy]
ignore_missing_imports = true
no_site_packages = true

[mypy-tests.*]
strict_optional = false

[isort]
line_length = 119
multi_line_output = 0
extra_standard_library = pkg_resources,setuptools,logging,os,warnings,abc,typing,collections,functools,datetime,copy
known_first_party = saliency_metrics
known_third_party = numpy,torch,pytest,albumentations,cv2,torchvision,timm,mmcv,ignite
no_lines_before = STDLIB,LOCALFOLDER
default_section = THIRDPARTY
